--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,9 +7,24 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
-
+  sonar-cloud-build:
     runs-on: ubuntu-latest
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v4
+        
+      - name: Analyze with SonarCloud
+        uses: SonarSource/sonarcloud-github-action@v2
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }} 
+        with:
+          args:
+            -Dsonar.projectKey=Prayas-sharmaa_DevSecOps
+            -Dsonar.organization=prayas-sharmaa
+          projectBaseDir: .
+  python-build:
+    runs-on: ubuntu-latest
+    needs: sonar-cloud-build
     strategy:
       matrix:
         python-version: ['3.10']
@@ -30,7 +45,7 @@ jobs:
 
   docker-build:
     runs-on: ubuntu-latest
-    needs: build
+    needs: python-build
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -47,5 +62,3 @@ jobs:
           context: .
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/storemanagement:latest
-
-# test
