--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,6 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
+
   sonar-cloud-build:
     runs-on: ubuntu-latest
     steps:
@@ -21,6 +22,7 @@ jobs:
           args:
             -Dsonar.projectKey=Prayas-sharmaa_DevSecOps
             -Dsonar.organization=prayas-sharmaa
+
   python-build:
     runs-on: ubuntu-latest
     needs: sonar-cloud-build
@@ -61,3 +63,43 @@ jobs:
           context: .
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/storemanagement:latest
+
+  Infrastructure:
+    runs-on: ubuntu-latest
+    needs: docker-build
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
+      AWS_REGION: "us-east-1"
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install Terraform
+        uses: hashicorp/setup-terraform@v3
+
+      - name: Check if Elastic Beanstalk app exists
+        id: ebe_check
+        run: |
+          if aws elasticbeanstalk describe-environments \
+              --region $AWS_REGION \
+              --environment-names "storemanagement-env" >/dev/null 2>&1; then
+              echo "exists=true" >> $GITHUB_OUTPUT
+          else
+              echo "exists=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Skip or Run Terraform
+        if: steps.ebe_check.outputs.exists == 'false'
+        run: |
+          cd terraform
+          terraform init
+          terraform validate
+          terraform plan -out=tfplan
+          terraform apply -auto-approve tfplan
+
+      - name: Terraform skipped (EB already deployed)
+        if: steps.ebe_check.outputs.exists == 'true'
+        run: echo "Elastic Beanstalk already deployed — skipping Terraform."
