--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -17,9 +17,9 @@ jobs:
       - name: Analyze with SonarCloud
         uses: SonarSource/sonarcloud-github-action@v2
         env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }} 
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
-          args:
+          args: >
             -Dsonar.projectKey=Prayas-sharmaa_DevSecOps
             -Dsonar.organization=prayas-sharmaa
 
@@ -31,18 +31,21 @@ jobs:
         python-version: ['3.10']
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install Dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Run Tests
-      run: |
-        python manage.py test
+      - uses: actions/checkout@v4
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Run Tests
+        run: |
+          python manage.py test
 
   docker-build:
     runs-on: ubuntu-latest
@@ -71,7 +74,7 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
-      AWS_REGION: "us-east-1"
+      AWS_REGION: us-east-1
 
     steps:
       - name: Checkout code
@@ -80,18 +83,18 @@ jobs:
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v3
 
-      - name: Check if Elastic Beanstalk app exists
+      - name: Check if Elastic Beanstalk environment exists
         id: ebe_check
         run: |
           if aws elasticbeanstalk describe-environments \
               --region $AWS_REGION \
               --environment-names "storemanagement-env" >/dev/null 2>&1; then
               echo "exists=true" >> $GITHUB_OUTPUT
-          else
+            else
               echo "exists=false" >> $GITHUB_OUTPUT
           fi
 
-      - name: Skip or Run Terraform
+      - name: Apply Terraform (Only if EB is not deployed)
         if: steps.ebe_check.outputs.exists == 'false'
         run: |
           cd terraform
@@ -102,4 +105,35 @@ jobs:
 
       - name: Terraform skipped (EB already deployed)
         if: steps.ebe_check.outputs.exists == 'true'
-        run: echo "Elastic Beanstalk already deployed — skipping Terraform." 
+        run: echo "Elastic Beanstalk already deployed — skipping Terraform."
+
+  ansible-deploy:
+    runs-on: ubuntu-latest
+    needs: Infrastructure
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
+      AWS_REGION: us-east-1
+      DATADOG_API_KEY: ${{ secrets.DATADOG_API_KEY }}
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Install Ansible
+        run: |
+          sudo apt update
+          sudo apt install -y ansible
+
+      - name: Prepare SSH key for Ansible
+        run: |
+          echo "${{ secrets.EB_SSH_KEY }}" > private_key.pem
+          chmod 600 private_key.pem
+
+      - name: Run Ansible Playbook (Datadog setup)
+        run: |
+          ansible-playbook \
+            -i ansible/inventories/hosts.ini \
+            --key-file private_key.pem \
+            ansible/playbooks/configure_datadog.yml
