--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -11,7 +11,7 @@ jobs:
   sonar-cloud-build:
     runs-on: ubuntu-latest
     steps:
-      - name: checkout code
+      - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Analyze with SonarCloud
@@ -33,7 +33,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
@@ -44,8 +44,7 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run Tests
-        run: |
-          python manage.py test
+        run: python manage.py test
 
   docker-build:
     runs-on: ubuntu-latest
@@ -60,7 +59,7 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push Docker image
+      - name: Build & Push Docker Image
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -70,6 +69,7 @@ jobs:
   Infrastructure:
     runs-on: ubuntu-latest
     needs: docker-build
+
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -83,18 +83,18 @@ jobs:
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v3
 
-      - name: Check if Elastic Beanstalk environment exists
+      - name: Check EB environment
         id: ebe_check
         run: |
           if aws elasticbeanstalk describe-environments \
               --region $AWS_REGION \
               --environment-names "storemanagement-env" >/dev/null 2>&1; then
               echo "exists=true" >> $GITHUB_OUTPUT
-            else
+          else
               echo "exists=false" >> $GITHUB_OUTPUT
           fi
 
-      - name: Apply Terraform (Only if EB is not deployed)
+      - name: Apply Terraform (deploy only once)
         if: steps.ebe_check.outputs.exists == 'false'
         run: |
           cd terraform
@@ -103,13 +103,14 @@ jobs:
           terraform plan -out=tfplan
           terraform apply -auto-approve tfplan
 
-      - name: Terraform skipped (EB already deployed)
+      - name: Terraform skipped
         if: steps.ebe_check.outputs.exists == 'true'
         run: echo "Elastic Beanstalk already deployed — skipping Terraform."
 
   ansible-deploy:
     runs-on: ubuntu-latest
     needs: Infrastructure
+
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -121,17 +122,21 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install Ansible
+      - name: Install Ansible + dependencies
         run: |
           sudo apt update
           sudo apt install -y ansible
+
+      - name: Install required Ansible roles
+        run: |
+          ansible-galaxy install -r ansible/requirements.yml
 
       - name: Prepare SSH key for Ansible
         run: |
           echo "${{ secrets.EB_SSH_KEY }}" > private_key.pem
           chmod 600 private_key.pem
 
-      - name: Run Ansible Playbook (Datadog setup)
+      - name: Run Datadog Playbook
         run: |
           ansible-playbook \
             -i ansible/inventories/hosts.ini \
