--- a/ansible/playbooks/configure_datadog.yml
+++ b/ansible/playbooks/configure_datadog.yml
@@ -1,10 +1,29 @@
 ---
-- name: Configure Datadog Agent on Elastic Beanstalk EC2
+- name: Configure Datadog Agent on Elastic Beanstalk EC2 instances
   hosts: eb_instances
   become: yes
 
   vars:
     datadog_api_key: "{{ lookup('env', 'DATADOG_API_KEY') }}"
+    datadog_site: "datadoghq.com"
 
   roles:
-    - datadog
+    - datadog.datadog
+
+  vars:
+    datadog_config:
+      logs_enabled: true
+      process_config:
+        enabled: "true"
+
+    datadog_agent_major_version: 7
+
+    datadog_checks:
+      system_core:
+        init_config:
+        instances:
+          - {}
+
+    datadog_additional_groups:
+      - adm
+      - syslog
