--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,5 +1,7 @@
 [defaults]
-inventory = inventories/dev/hosts.ini
+inventory = ./inventory_eb_ssm.py
 host_key_checking = False
-retry_files_enabled = False
-roles_path = roles
+interpreter_python = auto
+
+[connection]
+aws_region = us-east-1
