--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: DevSecOps CI
+name: DevSecOps CI/CD
 
 on:
   push:
@@ -8,6 +8,9 @@ on:
 
 jobs:
 
+  # ========================
+  # 1️⃣ SonarCloud Analysis
+  # ========================
   sonar-cloud-build:
     runs-on: ubuntu-latest
     steps:
@@ -23,13 +26,15 @@ jobs:
             -Dsonar.projectKey=Prayas-sharmaa_DevSecOps
             -Dsonar.organization=prayas-sharmaa
 
+  # ========================
+  # 2️⃣ Python Build & Tests
+  # ========================
   python-build:
     runs-on: ubuntu-latest
     needs: sonar-cloud-build
     strategy:
       matrix:
         python-version: ['3.10']
-
     steps:
       - uses: actions/checkout@v4
 
@@ -46,12 +51,14 @@ jobs:
       - name: Run Tests
         run: python manage.py test
 
+  # ========================
+  # 3️⃣ Docker Build & Push
+  # ========================
   docker-build:
     runs-on: ubuntu-latest
     needs: python-build
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
@@ -66,19 +73,19 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/storemanagement:latest
 
-  Infrastructure:
+  # ========================
+  # 4️⃣ Terraform Infrastructure (only once)
+  # ========================
+  infrastructure:
     runs-on: ubuntu-latest
     needs: docker-build
-
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
       AWS_REGION: us-east-1
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v3
@@ -107,38 +114,65 @@ jobs:
         if: steps.ebe_check.outputs.exists == 'true'
         run: echo "Elastic Beanstalk already deployed — skipping Terraform."
 
-  ansible-deploy:
+  # ========================
+  # 5️⃣ Deploy Docker to Elastic Beanstalk
+  # ========================
+  deploy-to-eb:
     runs-on: ubuntu-latest
-    needs: Infrastructure
-
+    needs: infrastructure
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
       AWS_REGION: us-east-1
-      DATADOG_API_KEY: ${{ secrets.DATADOG_API_KEY }}
+      DOCKER_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/storemanagement:latest
+      S3_BUCKET: storemanagement-eb-bucket
+      EB_APP: storemanagement-app
+      EB_ENV: storemanagement-env
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Install Ansible + dependencies
+      - name: Install AWS CLI & zip
         run: |
           sudo apt update
-          sudo apt install -y ansible
+          sudo apt install -y awscli zip
 
-      - name: Install required Ansible roles
+      - name: Create Dockerrun.aws.json
         run: |
-          ansible-galaxy install -r ansible/requirements.yml
+          cat > Dockerrun.aws.json <<EOF
+          {
+            "AWSEBDockerrunVersion": 1,
+            "Image": {
+              "Name": "${DOCKER_IMAGE}",
+              "Update": "true"
+            },
+            "Ports": [
+              {
+                "ContainerPort": 8000
+              }
+            ]
+          }
+          EOF
 
-      - name: Prepare SSH key for Ansible
-        run: |
-          echo "${{ secrets.EB_SSH_KEY }}" > private_key.pem
-          chmod 600 private_key.pem
+      - name: Zip Dockerrun
+        run: zip deploy.zip Dockerrun.aws.json
 
-      - name: Run Datadog Playbook
+      - name: Upload to S3
+        run: aws s3 cp deploy.zip s3://$S3_BUCKET/deploy-$(date +%s).zip
+
+      - name: Create EB application version
         run: |
-          ansible-playbook \
-            -i ansible/inventories/hosts.ini \
-            --key-file private_key.pem \
-            ansible/playbooks/configure_datadog.yml
+          VERSION="v-$(date +%s)"
+          S3_FILE="deploy-$(date +%s).zip"
+          aws elasticbeanstalk create-application-version \
+            --application-name "$EB_APP" \
+            --version-label "$VERSION" \
+            --source-bundle S3Bucket="$S3_BUCKET",S3Key="$S3_FILE"
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+
+      - name: Deploy EB Environment
+        run: |
+          aws elasticbeanstalk update-environment \
+            --environment-name "$EB_ENV" \
+            --version-label "$VERSION"
