--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -8,9 +8,6 @@ on:
 
 jobs:
 
-  # ========================
-  # 1️⃣ SonarCloud Analysis
-  # ========================
   sonar-cloud-build:
     runs-on: ubuntu-latest
     steps:
@@ -26,15 +23,13 @@ jobs:
             -Dsonar.projectKey=Prayas-sharmaa_DevSecOps
             -Dsonar.organization=prayas-sharmaa
 
-  # ========================
-  # 2️⃣ Python Build & Tests
-  # ========================
   python-build:
     runs-on: ubuntu-latest
     needs: sonar-cloud-build
     strategy:
       matrix:
         python-version: ['3.10']
+
     steps:
       - uses: actions/checkout@v4
 
@@ -51,14 +46,12 @@ jobs:
       - name: Run Tests
         run: python manage.py test
 
-  # ========================
-  # 3️⃣ Docker Build & Push
-  # ========================
   docker-build:
     runs-on: ubuntu-latest
     needs: python-build
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
@@ -73,19 +66,19 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/storemanagement:latest
 
-  # ========================
-  # 4️⃣ Terraform Infrastructure (only once)
-  # ========================
-  infrastructure:
+  Infrastructure:
     runs-on: ubuntu-latest
     needs: docker-build
+
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
       AWS_REGION: us-east-1
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v3
@@ -114,65 +107,83 @@ jobs:
         if: steps.ebe_check.outputs.exists == 'true'
         run: echo "Elastic Beanstalk already deployed — skipping Terraform."
 
-  # ========================
-  # 5️⃣ Deploy Docker to Elastic Beanstalk
-  # ========================
-  deploy-to-eb:
+  eb-deploy:
     runs-on: ubuntu-latest
-    needs: infrastructure
+    needs: docker-build
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
-      AWS_REGION: us-east-1
+      AWS_REGION: "us-east-1"
       DOCKER_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/storemanagement:latest
-      S3_BUCKET: storemanagement-eb-bucket
-      EB_APP: storemanagement-app
-      EB_ENV: storemanagement-env
+      EB_APP_NAME: "storemanagement"
+      EB_ENV_NAME: "storemanagement-env"
+      S3_BUCKET: "eb-deployments-${{ secrets.AWS_ACCOUNT_ID }}" # Create an S3 bucket for deployments
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Install AWS CLI & zip
+      - name: Install dependencies
         run: |
           sudo apt update
-          sudo apt install -y awscli zip
+          sudo apt install -y unzip zip curl
+
+      - name: Install AWS CLI v2
+        run: |
+          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+          unzip awscliv2.zip
+          sudo ./aws/install
+          aws --version
+
+      - name: Configure AWS CLI
+        run: |
+          aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
+          aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
+          aws configure set region $AWS_REGION
 
       - name: Create Dockerrun.aws.json
         run: |
-          cat > Dockerrun.aws.json <<EOF
-          {
-            "AWSEBDockerrunVersion": 1,
+          echo '{
+            "AWSEBDockerrunVersion": "1",
             "Image": {
-              "Name": "${DOCKER_IMAGE}",
+              "Name": "'"$DOCKER_IMAGE"'",
               "Update": "true"
             },
             "Ports": [
-              {
-                "ContainerPort": 8000
-              }
+              {"ContainerPort": "8000"}
             ]
-          }
-          EOF
+          }' > Dockerrun.aws.json
 
-      - name: Zip Dockerrun
-        run: zip deploy.zip Dockerrun.aws.json
+      - name: Zip Dockerrun file
+        run: zip -r eb-deploy.zip Dockerrun.aws.json
 
       - name: Upload to S3
-        run: aws s3 cp deploy.zip s3://$S3_BUCKET/deploy-$(date +%s).zip
-
-      - name: Create EB application version
         run: |
-          VERSION="v-$(date +%s)"
-          S3_FILE="deploy-$(date +%s).zip"
+          aws s3 cp eb-deploy.zip s3://$S3_BUCKET/eb-deploy.zip
+
+      - name: Deploy to Elastic Beanstalk
+        run: |
+          VERSION_LABEL="v-$(date +%Y%m%d%H%M%S)"
+
           aws elasticbeanstalk create-application-version \
-            --application-name "$EB_APP" \
-            --version-label "$VERSION" \
-            --source-bundle S3Bucket="$S3_BUCKET",S3Key="$S3_FILE"
-          echo "VERSION=$VERSION" >> $GITHUB_ENV
+            --application-name "$EB_APP_NAME" \
+            --version-label "$VERSION_LABEL" \
+            --source-bundle S3Bucket="$S3_BUCKET",S3Key="eb-deploy.zip"
 
-      - name: Deploy EB Environment
-        run: |
-          aws elasticbeanstalk update-environment \
-            --environment-name "$EB_ENV" \
-            --version-label "$VERSION"
+          if aws elasticbeanstalk describe-environments \
+              --application-name "$EB_APP_NAME" \
+              --environment-names "$EB_ENV_NAME" \
+              --no-include-deleted | grep -q "$EB_ENV_NAME"; then
+              echo "Updating existing EB environment..."
+              aws elasticbeanstalk update-environment \
+                --environment-name "$EB_ENV_NAME" \
+                --version-label "$VERSION_LABEL"
+          else
+              echo "Creating new EB environment..."
+              aws elasticbeanstalk create-environment \
+                --application-name "$EB_APP_NAME" \
+                --environment-name "$EB_ENV_NAME" \
+                --version-label "$VERSION_LABEL" \
+                --solution-stack-name "64bit Amazon Linux 2 v5.7.6 running Docker"
+          fi
