--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -118,7 +118,7 @@ jobs:
       DOCKER_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/storemanagement:latest
       EB_APP_NAME: "storemanagement"
       EB_ENV_NAME: "storemanagement-env"
-      S3_BUCKET: "eb-deployments-${{ secrets.AWS_ACCOUNT_ID }}" # Create an S3 bucket for deployments
+      S3_BUCKET: "eb-deployments-${{ secrets.AWS_ACCOUNT_ID }}" # Make sure this exists
 
     steps:
       - name: Checkout code
@@ -127,14 +127,11 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt update
-          sudo apt install -y unzip zip curl
+          sudo apt install -y unzip zip
 
-      - name: Install AWS CLI v2
-        run: |
-          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-          unzip awscliv2.zip
-          sudo ./aws/install
-          aws --version
+      # Skip AWS CLI install since it is preinstalled
+      - name: Verify AWS CLI
+        run: aws --version
 
       - name: Configure AWS CLI
         run: |
@@ -165,7 +162,6 @@ jobs:
       - name: Deploy to Elastic Beanstalk
         run: |
           VERSION_LABEL="v-$(date +%Y%m%d%H%M%S)"
-
           aws elasticbeanstalk create-application-version \
             --application-name "$EB_APP_NAME" \
             --version-label "$VERSION_LABEL" \
@@ -186,4 +182,3 @@ jobs:
                 --environment-name "$EB_ENV_NAME" \
                 --version-label "$VERSION_LABEL" \
                 --solution-stack-name "64bit Amazon Linux 2 v5.7.6 running Docker"
-          fi
