--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -29,6 +29,7 @@ jobs:
     strategy:
       matrix:
         python-version: ['3.10']
+
     steps:
       - uses: actions/checkout@v4
 
@@ -73,6 +74,7 @@ jobs:
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
       AWS_REGION: us-east-1
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -92,41 +94,4 @@ jobs:
           fi
 
       - name: Apply Terraform (deploy only once)
-        if: steps.ebe_check.outputs.exists == 'false'
-        run: |
-          cd terraform
-          terraform init
-          terraform validate
-          terraform plan -out=tfplan
-          terraform apply -auto-approve tfplan
-
-      - name: Terraform skipped
-        if: steps.ebe_check.outputs.exists == 'true'
-        run: echo "Elastic Beanstalk already deployed — skipping Terraform."
-
-  deploy-to-eb:
-    runs-on: ubuntu-latest
-    needs: Infrastructure
-    env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
-      AWS_REGION: us-east-1
-      EB_APP_NAME: "storemanagement-app"
-      EB_ENV_NAME: "storemanagement-env"
-      DOCKERHUB_IMAGE: "${{ secrets.DOCKERHUB_USERNAME }}/storemanagement:latest"
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Install EB CLI
-        run: |
-          python -m pip install --upgrade pip
-          pip install awsebcli
-
-      - name: Create Dockerrun.aws.json
-        run: |
-          echo '{
-            "AWSEBDockerrunVersion": "1",
-            "Image": {
-              "Name": "'"$DOCKERHUB_IMAGE"'"_
+        if: steps.ebe_check.outputs.ex_
