--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -141,6 +141,4 @@ jobs:
 
       - name: Deploy to Elastic Beanstalk
         run: |
-          eb init $EB_APP_NAME --region $AWS_REGION
-          eb use $EB_ENV_NAME
-          eb deploy
+          eb deploy $EB_ENV_NAME
