--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -19,7 +19,7 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
-          args:
+          args: >
             -Dsonar.projectKey=Prayas-sharmaa_DevSecOps
             -Dsonar.organization=prayas-sharmaa
 
@@ -31,6 +31,7 @@ jobs:
         python-version: ['3.10']
     steps:
       - uses: actions/checkout@v4
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
@@ -48,8 +49,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: python-build
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
@@ -57,7 +57,7 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push Docker image
+      - name: Build & Push Docker Image
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -72,15 +72,13 @@ jobs:
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
       AWS_REGION: us-east-1
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v3
 
-      - name: Check if Elastic Beanstalk environment exists
+      - name: Check EB Environment
         id: ebe_check
         run: |
           if aws elasticbeanstalk describe-environments \
@@ -91,7 +89,7 @@ jobs:
               echo "exists=false" >> $GITHUB_OUTPUT
           fi
 
-      - name: Run Terraform (first deployment only)
+      - name: Apply Terraform (first deployment only)
         if: steps.ebe_check.outputs.exists == 'false'
         run: |
           cd terraform
@@ -113,25 +111,38 @@ jobs:
       AWS_REGION: us-east-1
       EB_APP_NAME: ${{ secrets.EB_APP_NAME }}
       EB_ENV_NAME: ${{ secrets.EB_ENV_NAME }}
-
+      DOCKERHUB_IMAGE: "${{ secrets.DOCKERHUB_USERNAME }}/storemanagement:latest"
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Install EB CLI
         run: |
+          python -m pip install --upgrade pip
           pip install awsebcli
+
+      - name: Create Dockerrun.aws.json
+        run: |
+          cat > Dockerrun.aws.json <<EOF
+          {
+            "AWSEBDockerrunVersion": "1",
+            "Image": {
+              "Name": "${DOCKERHUB_IMAGE}",
+              "Update": "true"
+            },
+            "Ports": [
+              {
+                "ContainerPort": "8000"
+              }
+            ]
+          }
+          EOF
 
       - name: Initialize EB CLI
         run: |
-          eb init "$EB_APP_NAME" \
-            --platform "Docker" \
-            --region "$AWS_REGION" \
-            --keypair "eb-key"
-      
-      - name: Set EB environment
-        run: |
-          eb use "$EB_ENV_NAME"
+          eb init "$EB_APP_NAME" --platform "Docker" --region "$AWS_REGION" --quiet
+
+      - name: Use EB Environment
+        run: eb use "$EB_ENV_NAME"
 
       - name: Deploy to Elastic Beanstalk
-        run: eb deploy "$EB_ENV_NAME"
+        run: eb deploy "$EB_ENV_NAME" --staged --verbose
