--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -105,6 +105,7 @@ jobs:
   deploy-eb:
     runs-on: ubuntu-latest
     # needs: Infrastructure
+    needs: docker-build
     name: Deploy to Elastic Beanstalk
   
     steps:
