--- a/ansible/hosts.ini
+++ b/ansible/hosts.ini
@@ -1,2 +1,2 @@
 [ec2]
-ec2-13-221-255-187.compute-1.amazonaws.com ansible_user=ec2-user
+ec2-13-221-255-187.compute-1.amazonaws.com ansible_user=ec2-user ansible_ssh_private_key_file=/home/ec2-user/environment/labsuser.pem
