--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -14,213 +14,202 @@ on:
 
 jobs:
 
-  lint:
-    runs-on: ubuntu-latest
-    name: Lint Code (pylint)
+  # lint:
+  #   runs-on: ubuntu-latest
+  #   name: Lint Code (pylint)
 
-    steps:
-      - uses: actions/checkout@v4
+  #   steps:
+  #     - uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.12"
+  #     - uses: actions/setup-python@v5
+  #       with:
+  #         python-version: "3.12"
 
-      - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
-          pip install pylint pylint-django
+  #     - name: Install dependencies
+  #       run: |
+  #         pip install -r requirements.txt
+  #         pip install pylint pylint-django
 
-      - name: Run pylint
-        run: pylint smsapp sms_project --exit-zero
+  #     - name: Run pylint
+  #       run: pylint smsapp sms_project --exit-zero
         
-  security:
-    runs-on: ubuntu-latest
-    needs: lint
-    name: Security Scan (Bandit + Safety)
+  # security:
+  #   runs-on: ubuntu-latest
+  #   needs: lint
+  #   name: Security Scan (Bandit + Safety)
 
-    steps:
-      - uses: actions/checkout@v4
+  #   steps:
+  #     - uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.12"
+  #     - uses: actions/setup-python@v5
+  #       with:
+  #         python-version: "3.12"
 
-      - name: Install security tools
-        run: |
-          pip install bandit safety
+  #     - name: Install security tools
+  #       run: |
+  #         pip install bandit safety
 
-      - name: Bandit (SAST)
-        run: bandit -r smsapp -ll --exit-zero
+  #     - name: Bandit (SAST)
+  #       run: bandit -r smsapp -ll --exit-zero
 
-      - name: Safety (dependency vulnerabilities)
-        run: safety check || true
+  #     - name: Safety (dependency vulnerabilities)
+  #       run: safety check || true
   
 
-  sonar-cloud-build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+  # sonar-cloud-build:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
 
-      - name: Analyze with SonarCloud
-        uses: SonarSource/sonarcloud-github-action@v2
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        with:
-          args: >
-            -Dsonar.projectKey=Prayas-sharmaa_DevSecOps
-            -Dsonar.organization=prayas-sharmaa
+  #     - name: Analyze with SonarCloud
+  #       uses: SonarSource/sonarcloud-github-action@v2
+  #       env:
+  #         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+  #       with:
+  #         args: >
+  #           -Dsonar.projectKey=Prayas-sharmaa_DevSecOps
+  #           -Dsonar.organization=prayas-sharmaa
 
-  python-build:
-    runs-on: ubuntu-latest
-    needs: sonar-cloud-build
-    strategy:
-      matrix:
-        python-version: ['3.10']
-    steps:
-      - uses: actions/checkout@v4
+  # python-build:
+  #   runs-on: ubuntu-latest
+  #   needs: sonar-cloud-build
+  #   strategy:
+  #     matrix:
+  #       python-version: ['3.10']
+  #   steps:
+  #     - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
+  #     - name: Set up Python
+  #       uses: actions/setup-python@v4
+  #       with:
+  #         python-version: ${{ matrix.python-version }}
 
-      - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+  #     - name: Install Dependencies
+  #       run: |
+  #         python -m pip install --upgrade pip
+  #         pip install -r requirements.txt
 
-      - name: Run Tests
-        run: python manage.py test
+  #     - name: Run Tests
+  #       run: python manage.py test
 
-  docker-build:
-    runs-on: ubuntu-latest
-    needs: python-build
-    steps:
-      - uses: actions/checkout@v4
+  # docker-build:
+  #   runs-on: ubuntu-latest
+  #   needs: python-build
+  #   steps:
+  #     - uses: actions/checkout@v4
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+  #     - name: Log in to Docker Hub
+  #       uses: docker/login-action@v3
+  #       with:
+  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build & Push Docker Image
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/storemanagement:latest
+  #     - name: Build & Push Docker Image
+  #       uses: docker/build-push-action@v6
+  #       with:
+  #         context: .
+  #         push: true
+  #         tags: ${{ secrets.DOCKERHUB_USERNAME }}/storemanagement:latest
 
-  Infrastructure:
-    runs-on: ubuntu-latest
-    needs: docker-build
-    env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
-      AWS_REGION: us-east-1
-    steps:
-      - uses: actions/checkout@v4
+  # Infrastructure:
+  #   runs-on: ubuntu-latest
+  #   needs: docker-build
+  #   env:
+  #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #     AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
+  #     AWS_REGION: us-east-1
+  #   steps:
+  #     - uses: actions/checkout@v4
 
-      - name: Install Terraform
-        uses: hashicorp/setup-terraform@v3
+  #     - name: Install Terraform
+  #       uses: hashicorp/setup-terraform@v3
 
-      - name: Check EB environment
-        id: ebe_check
-        run: |
-          if aws elasticbeanstalk describe-environments \
-              --region $AWS_REGION \
-              --environment-names "${{ secrets.EB_ENV_NAME }}" >/dev/null 2>&1; then
-              echo "exists=true" >> $GITHUB_OUTPUT
-          else
-              echo "exists=false" >> $GITHUB_OUTPUT
-          fi
+  #     - name: Check EB environment
+  #       id: ebe_check
+  #       run: |
+  #         if aws elasticbeanstalk describe-environments \
+  #             --region $AWS_REGION \
+  #             --environment-names "${{ secrets.EB_ENV_NAME }}" >/dev/null 2>&1; then
+  #             echo "exists=true" >> $GITHUB_OUTPUT
+  #         else
+  #             echo "exists=false" >> $GITHUB_OUTPUT
+  #         fi
 
-      - name: Apply Terraform (first deployment only)
-        if: steps.ebe_check.outputs.exists == 'false'
-        run: |
-          cd terraform
-          terraform init
-          terraform validate
-          terraform plan -out=tfplan
-          terraform apply -auto-approve
+  #     - name: Apply Terraform (first deployment only)
+  #       if: steps.ebe_check.outputs.exists == 'false'
+  #       run: |
+  #         cd terraform
+  #         terraform init
+  #         terraform validate
+  #         terraform plan -out=tfplan
+  #         terraform apply -auto-approve
 
-      - name: Terraform skipped
-        if: steps.ebe_check.outputs.exists == 'true'
-        run: echo "Elastic Beanstalk already deployed — skipping Terraform."
+  #     - name: Terraform skipped
+  #       if: steps.ebe_check.outputs.exists == 'true'
+  #       run: echo "Elastic Beanstalk already deployed — skipping Terraform."
 
-  deploy-eb:
-    runs-on: ubuntu-latest
-    needs: Infrastructure
-    name: Deploy to Elastic Beanstalk
+  # deploy-eb:
+  #   runs-on: ubuntu-latest
+  #   needs: Infrastructure
+  #   name: Deploy to Elastic Beanstalk
   
-    steps:
-      - uses: actions/checkout@v4
+  #   steps:
+  #     - uses: actions/checkout@v4
   
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
-          aws-region: us-east-1
+  #     - name: Configure AWS credentials
+  #       uses: aws-actions/configure-aws-credentials@v4
+  #       with:
+  #         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #         aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+  #         aws-region: us-east-1
   
-      - name: Create Elastic Beanstalk bundle
-        run: |
-          zip -r deploy.zip Dockerrun.aws.json || echo "No .elasticbeanstalk folder found, bundling Dockerrun only"
+  #     - name: Create Elastic Beanstalk bundle
+  #       run: |
+  #         zip -r deploy.zip Dockerrun.aws.json || echo "No .elasticbeanstalk folder found, bundling Dockerrun only"
   
-      - name: Deploy to Elastic Beanstalk
-        uses: einaregilsson/beanstalk-deploy@v22
-        with:
-          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws_session_token: ${{ secrets.AWS_SESSION_TOKEN }}
-          application_name: ${{ secrets.EB_APP_NAME }}
-          environment_name: ${{ secrets.EB_ENV_NAME }}
-          region: us-east-1
-          version_label: v-${{ github.run_number }}
-          deployment_package: deploy.zip
+  #     - name: Deploy to Elastic Beanstalk
+  #       uses: einaregilsson/beanstalk-deploy@v22
+  #       with:
+  #         aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #         aws_session_token: ${{ secrets.AWS_SESSION_TOKEN }}
+  #         application_name: ${{ secrets.EB_APP_NAME }}
+  #         environment_name: ${{ secrets.EB_ENV_NAME }}
+  #         region: us-east-1
+  #         version_label: v-${{ github.run_number }}
+  #         deployment_package: deploy.zip
 
-  zap-scan:
-    name: OWASP ZAP Baseline Scan
-    runs-on: ubuntu-latest
-    needs: deploy-eb
-  
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-  
-      - name: Run ZAP Baseline Scan
-        uses: zaproxy/action-baseline@v0.10.0
-        with:
-          target: "http://storewebapp.us-east-1.elasticbeanstalk.com"
-          rules_file_name: ".zap/rules.tsv"
-          cmd_options: "-a"
-          fail_action: false
-  
-      - name: Prepare ZAP Output
-        id: prepare
-        run: |
-          mkdir -p zap-output
-          FILES_EXIST=false
-          for file in report_html.html report_json.json report_md.md; do
-            if [ -f "$file" ]; then
-              cp "$file" zap-output/
-              FILES_EXIST=true
-            else
-              echo "$file not found, skipping..."
-            fi
-          done
-          echo "files_exist=$FILES_EXIST" >> $GITHUB_OUTPUT
-  
-      - name: Upload ZAP Report Artifact
-        if: steps.prepare.outputs.files_exist == 'true'
-        uses: actions/upload-artifact@v4
-        with:
-          name: zap-scan-report
-          path: zap-output/
-          retention-days: 1
+  zap_scan:
+      runs-on: ubuntu-latest
+      # needs: deploy-eb
+      name: OWASP ZAP Baseline Scan
+   
+      permissions:
+        contents: read
+        security-events: write
+   
+      steps:
+        - name: Create writable output directory
+          run: mkdir -p ${{ github.workspace }}/zap-output
+          
+        - uses: actions/checkout@v4
+   
+        - uses: zaproxy/action-baseline@v0.15.0
+          with:
+            target: "http://storewebapp.us-east-1.elasticbeanstalk.com"
+            allow_issue_writing: false
+          env:
+            GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+   
+        - name: Upload ZAP Report
+          if: always()
+          uses: actions/upload-artifact@v4
+          with:
+            name: zap-security-report
+            path: zap-output/zapreport.html
 
 
 
